Capitulo-8/networkpolicy-aplicacion.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: politica-aplicacion
  namespace: produccion
spec:
  podSelector:
    matchLabels:
      app: aplicacion
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.1.0/24
